<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rootmind.nowcabs.DriverProfileActivity"
    tools:showIn="@layout/app_bar_driverprofile"
    >

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Hello World!"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->


    <RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
        xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
        android:paddingRight = "@dimen/activity_horizontal_margin"
        android:paddingTop = "@dimen/activity_vertical_margin"
        android:paddingBottom = "@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >


        <EditText
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:id = "@+id/txt_mobileNo"
            android:drawableLeft="@drawable/dial_blue48px"
            android:hint = "Enter Mobile No"
            android:maxLength="20"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:focusable = "true"
            android:textColorHighlight = "#ff7eff15"
            android:textColorHint =  "#7e7e7e"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"
            android:inputType="number|none"
            android:digits="0123456789"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/txt_name"
            />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/txt_name"
            android:maxLength="50"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_mobileNo"
            android:drawableLeft="@drawable/avatar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/txt_mobileNo"
            android:layout_alignEnd="@+id/txt_mobileNo"
            android:textColorHint="#7e7e7e"
            android:hint="Name"
            android:imeOptions="actionDone"
            android:nextFocusForward="@+id/btn_login"
            />

        <EditText
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:inputType="text"
            android:id = "@+id/txt_vehicleNo"
            android:hint = "Enter Vehicle No"
            android:maxLength="10"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:textColorHighlight = "#ff7eff15"
            android:textColorHint = "#7e7e7e"
            android:layout_below="@+id/txt_name"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"
            android:imeOptions="actionDone"
            android:drawableLeft="@drawable/cab_outline"

            />

        <!-- Spinner Element -->
        <Spinner
            android:id="@+id/dropDown_vehicleType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/dropDown_vehicleType_prompt"
            android:entries="@array/vehicleType_array"
            android:layout_below="@+id/txt_vehicleNo"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"
            android:nextFocusForward="@+id/dropDown_locale"
            />

        <Spinner
            android:id="@+id/dropDown_locale"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/dropDown_local_prompt"
            android:entries="@array/locale_array"
            android:layout_below="@+id/dropDown_vehicleType"
            android:layout_marginTop="15dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"
            android:nextFocusForward="@+id/btn_login"
            />




        <!--24-Sep-2018 background="#1E90FF"-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btn_save"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/dropDown_locale"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/txt_name"
            android:layout_alignEnd="@+id/txt_mobileNo"
            android:background="@drawable/button"
            android:textColor="#ffffff"

            />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
